fix: highlight box width on mobile

--- a/themes/hugo-theme-m10c/assets/css/components/_post.scss
+++ b/themes/hugo-theme-m10c/assets/css/components/_post.scss
@@ -31,6 +31,8 @@
   }
 
   .highlight {
+    width: fit-content;
+    
     tbody {
       background-color: unset;
     }
